--- a/TopPlaces/en.lproj/MainStoryboard_iPad.storyboard
+++ b/TopPlaces/en.lproj/MainStoryboard_iPad.storyboard
@@ -308,7 +308,15 @@
                             </tableViewCell>
                         </prototypes>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Vacations" id="mB8-69-f8A"/>
+                    <navigationItem key="navigationItem" title="Vacations" id="mB8-69-f8A">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="AOf-Uf-2sJ">
+                            <connections>
+                                <segue destination="2Te-xp-XCb" kind="popover" identifier="Add Vacation" popoverAnchorBarButtonItem="AOf-Uf-2sJ" id="2hQ-Qr-DWf">
+                                    <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
+                                </segue>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="blackTranslucent"/>
                 </tableViewController>
             </objects>
@@ -546,59 +554,66 @@
             </objects>
             <point key="canvasLocation" x="1514" y="2716"/>
         </scene>
+        <!--Add Vacation View Controller - Add Vacation-->
+        <scene sceneID="WzN-iZ-40w">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Hm7-ux-O3h" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="2Te-xp-XCb" customClass="AddVacationViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Ft4-Nm-9Pv">
+                        <rect key="frame" x="0.0" y="20" width="320" height="160"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" id="XUk-VK-f27">
+                                <rect key="frame" x="20" y="64" width="280" height="31"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="NeI-eO-y34">
+                                <rect key="frame" x="124" y="103" width="72" height="37"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Add">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="addVacationName" destination="2Te-xp-XCb" eventType="touchUpInside" id="fMg-jV-cXX"/>
+                                </connections>
+                            </button>
+                            <navigationBar contentMode="scaleToFill" id="GTS-we-2Sf">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="Add Vacation" id="jY5-zm-bjd"/>
+                                </items>
+                            </navigationBar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Add Vacation" id="tZu-rd-d1X"/>
+                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="blackTranslucent"/>
+                    <connections>
+                        <outlet property="vacationName" destination="XUk-VK-f27" id="Ei3-kJ-gS4"/>
+                    </connections>
+                </viewController>
+            </objects>
+            <point key="canvasLocation" x="1034" y="3277"/>
+        </scene>
     </scenes>
     <resources>
         <image name="palm.png" width="30" height="30"/>
         <image name="world.png" width="30" height="30"/>
     </resources>
-    <classes>
-        <class className="CommonTableViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/CommonTableViewController.h"/>
-        </class>
-        <class className="CoreDataTableViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/CoreDataTableViewController.h"/>
-        </class>
-        <class className="ItineraryTableViewController" superclassName="CoreDataTableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ItineraryTableViewController.h"/>
-        </class>
-        <class className="PhotoViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/PhotoViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="imageView" candidateClass="UIImageView"/>
-                <relationship kind="outlet" name="scrollView" candidateClass="UIScrollView"/>
-                <relationship kind="outlet" name="spinner" candidateClass="UIActivityIndicatorView"/>
-                <relationship kind="outlet" name="toolbar" candidateClass="UIToolbar"/>
-                <relationship kind="outlet" name="toolbarTitle" candidateClass="UIBarButtonItem"/>
-            </relationships>
-        </class>
-        <class className="RecentPhotosTableViewController" superclassName="CommonTableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/RecentPhotosTableViewController.h"/>
-        </class>
-        <class className="TagsTableViewController" superclassName="CoreDataTableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/TagsTableViewController.h"/>
-        </class>
-        <class className="TopPhotosTableViewController" superclassName="CommonTableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/TopPhotosTableViewController.h"/>
-        </class>
-        <class className="TopPlacesTableViewController" superclassName="CommonTableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/TopPlacesTableViewController.h"/>
-        </class>
-        <class className="VacationPhotosTableViewController" superclassName="CoreDataTableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/VacationPhotosTableViewController.h"/>
-        </class>
-        <class className="VacationTableViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/VacationTableViewController.h"/>
-        </class>
-        <class className="VacationsTableViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/VacationsTableViewController.h"/>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar" statusBarStyle="blackTranslucent"/>
         <simulatedOrientationMetrics key="orientation"/>
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="Qjq-de-Rpy"/>
+        <segue reference="8fB-WX-rVE"/>
     </inferredMetricsTieBreakers>
 </document>
