--- a/TopPlaces/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/TopPlaces/en.lproj/MainStoryboard_iPhone.storyboard
@@ -263,7 +263,13 @@
                             </tableViewCell>
                         </prototypes>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Vacations" id="yRF-Ax-ua8"/>
+                    <navigationItem key="navigationItem" title="Vacations" id="yRF-Ax-ua8">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="UZo-9w-kdQ">
+                            <connections>
+                                <segue destination="Snf-CY-p1X" kind="push" identifier="Add Vacation" id="FdM-ug-msv"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
             </objects>
             <point key="canvasLocation" x="1114" y="1276"/>
@@ -335,6 +341,47 @@
             </objects>
             <point key="canvasLocation" x="1597" y="1276"/>
         </scene>
+        <!--Add Vacation View Controller - Add Vacation-->
+        <scene sceneID="cfE-3C-bTG">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="S97-Oc-TqE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="Snf-CY-p1X" customClass="AddVacationViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="gxW-eD-PLA">
+                        <rect key="frame" x="0.0" y="64" width="320" height="367"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" id="pCI-lO-uy0">
+                                <rect key="frame" x="20" y="20" width="280" height="31"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="xwG-TX-8QC">
+                                <rect key="frame" x="124" y="59" width="72" height="37"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Add">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="addVacationName" destination="Snf-CY-p1X" eventType="touchUpInside" id="Xrj-lu-Z7P"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Add Vacation" id="yAw-Qn-iol"/>
+                    <connections>
+                        <outlet property="vacationName" destination="pCI-lO-uy0" id="06w-qZ-TjF"/>
+                    </connections>
+                </viewController>
+            </objects>
+            <point key="canvasLocation" x="1597" y="1916"/>
+        </scene>
         <!--Itinerary Table View Controller - Itinerary-->
         <scene sceneID="6X8-hn-wYT">
             <objects>
@@ -382,7 +429,7 @@
                     <navigationItem key="navigationItem" title="Itinerary" id="rWv-dQ-zft"/>
                 </tableViewController>
             </objects>
-            <point key="canvasLocation" x="2074" y="957"/>
+            <point key="canvasLocation" x="2236" y="958"/>
         </scene>
         <!--Tags Table View Controller - Search-->
         <scene sceneID="A4d-Gf-wp8">
@@ -431,7 +478,7 @@
                     <navigationItem key="navigationItem" title="Search" id="ucR-0f-0tr"/>
                 </tableViewController>
             </objects>
-            <point key="canvasLocation" x="2074" y="1559"/>
+            <point key="canvasLocation" x="2236" y="1560"/>
         </scene>
         <!--Vacation Photos Table View Controller - Photos-->
         <scene sceneID="w4t-WD-NJZ">
@@ -480,7 +527,7 @@
                     <navigationItem key="navigationItem" title="Photos" id="JBx-wI-0aq"/>
                 </tableViewController>
             </objects>
-            <point key="canvasLocation" x="2555" y="1276"/>
+            <point key="canvasLocation" x="2717" y="1277"/>
         </scene>
         <!--Navigation Controller - Vacations-->
         <scene sceneID="BWj-nX-BYg">
@@ -522,55 +569,13 @@
         <image name="palm.png" width="30" height="30"/>
         <image name="world.png" width="30" height="30"/>
     </resources>
-    <classes>
-        <class className="CommonTableViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/CommonTableViewController.h"/>
-        </class>
-        <class className="CoreDataTableViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/CoreDataTableViewController.h"/>
-        </class>
-        <class className="ItineraryTableViewController" superclassName="CoreDataTableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ItineraryTableViewController.h"/>
-        </class>
-        <class className="PhotoViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/PhotoViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="imageView" candidateClass="UIImageView"/>
-                <relationship kind="outlet" name="scrollView" candidateClass="UIScrollView"/>
-                <relationship kind="outlet" name="spinner" candidateClass="UIActivityIndicatorView"/>
-                <relationship kind="outlet" name="toolbar" candidateClass="UIToolbar"/>
-                <relationship kind="outlet" name="toolbarTitle" candidateClass="UIBarButtonItem"/>
-            </relationships>
-        </class>
-        <class className="RecentPhotosTableViewController" superclassName="CommonTableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/RecentPhotosTableViewController.h"/>
-        </class>
-        <class className="TagsTableViewController" superclassName="CoreDataTableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/TagsTableViewController.h"/>
-        </class>
-        <class className="TopPhotosTableViewController" superclassName="CommonTableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/TopPhotosTableViewController.h"/>
-        </class>
-        <class className="TopPlacesTableViewController" superclassName="CommonTableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/TopPlacesTableViewController.h"/>
-        </class>
-        <class className="VacationPhotosTableViewController" superclassName="CoreDataTableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/VacationPhotosTableViewController.h"/>
-        </class>
-        <class className="VacationTableViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/VacationTableViewController.h"/>
-        </class>
-        <class className="VacationsTableViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/VacationsTableViewController.h"/>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="p0s-a1-FAF"/>
         <segue reference="vGU-K1-DxI"/>
+        <segue reference="JgA-YG-w3e"/>
     </inferredMetricsTieBreakers>
 </document>
